@@ -16,8 +16,10 @@ apt (0.8.16~exp8) experimental; urgency=low
   * cmdline/apt-{get,cache,mark}.cc:
     - use Lists instead of Sets if input order should be preserved for
       commands accepting lists of packages, e.g. policy (Closes: #625960)
+  * apt-pkg/depcache.cc:
+    - prefer native providers over foreigns even if the chain is foreign
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 11 Nov 2011 15:55:13 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 23 Nov 2011 00:18:35 +0100
 
 apt (0.8.16~exp7) experimental; urgency=low
 
